--- a/index.html
+++ b/index.html
@@ -21,12 +21,10 @@
                 <form action="login.js" method="post" autocomplete="on">
                     
                     <p>
-                        <label for="iemail"></label>
-                        <input type="email" name="email" id="iemail" placeholder="  seu e-mail">
+                        <div id="login"><i></i><input type="email" name="email" id="iemail" placeholder="  seu e-mail"></div>
                     </p>
 
                     <p>
-                        <label for="isenha"></label>
                         <input type="password" name="senha" id="isenha" placeholder="  sua senha">
                     </p>
 
