--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/style.css" media="all">
-    <link rel="stylesheet" href="estilos/tablet.css" media="screen and (min-width: 768px)">
+    <link rel="stylesheet" href="estilos/media-tablet.css" media="screen and (min-width: 768px)">
+    <link rel="stylesheet" href="estilos/media-desktop.css" media="screen and (min-width: 992px)">
 </head>
 <body>
     <main>
