--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de Login</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css" media="all">
     <link rel="stylesheet" href="estilos/media-tablet.css" media="screen and (min-width: 768px)">
     <link rel="stylesheet" href="estilos/media-desktop.css" media="screen and (min-width: 992px)">
@@ -24,7 +24,7 @@
                 <form action="login.js" method="post" autocomplete="on">
                     
                     <div id="login">
-                        <span id="usuario" class="material-symbols-outlined" >person</span>
+                        <i id="usuario" class="material-icons">person</i>
                         <input type="email" name="" id="iemail" placeholder="  seu e-mail" onclick="mudaCor()">
                     </div>
 
