--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 <form action="login.js" method="post" autocomplete="on">
                     
                     <div id="login">
-                        <i id="usuario" class="material-icons">person</i>
+                        <span id="usuario" class="material-icons">person</span>
                         <input type="email" name="" id="iemail" placeholder="  seu e-mail" onclick="mudaCor()">
                     </div>
 
                     <div id="senha">
-                        <span id="key" class="material-symbols-outlined" >key</span>
+                        <span id="key" class="material-icons">key</span>
                         <input type="password" name="" id="isenha" placeholder="  sua senha" onclick="mudaCor2()" required>
                     </div>
                 
