finalização do projeto

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                     
                     <div id="login">
                         <span id="usuario" class="material-icons">person</span>
-                        <input type="email" name="" id="iemail" placeholder="  seu e-mail" onclick="mudaCor()">
+                        <input type="email" name="" id="iemail" placeholder="  seu e-mail" autocomplete="email" required maxlength="30">
                     </div>
 
                     <div id="senha">
                         <span id="key" class="material-icons">key</span>
-                        <input type="password" name="" id="isenha" placeholder="  sua senha" onclick="mudaCor2()" required>
+                        <input type="password" name="" id="isenha" placeholder="  sua senha" required autocomplete="current-password" minlength="8" maxlength="16">
                     </div>
                 
                     <input type="submit" value="Entrar" id="entrar">
@@ -41,29 +41,5 @@
         </section>
         </div>
     </main>
-
-    <script>
-        var email = window.document.getElementById('iemail')
-        email.style.backgroundColor = '#98e7e5d5'
-        function mudaCor() {
-            if (email.style.backgroundColor == '#98e7e5d5') {
-                email.style.backgroundColor = '#ffffff'
-            }
-
-            if (iemail.style.backgroundColor == 'ffffff') {
-                iemail.style.backgroundColor = '#98e7e5d5'
-            }
-        }
-
-        function mudaCor2() {
-            if (isenha.style.backgroundColor = '#98e7e5d5') {
-                isenha.style.backgroundColor = '#ffffff'
-            }
-
-            else {
-                isenha.style.backgroundColor = '#98e7e5d5'
-            }
-        }
-    </script>
 </body>
 </html>
